# landscape-classifier

./: .gitignore  Dockerfile  IMAGES.md  Makefile  README.md  Utilisation_du_registre_MLFlow.ipynb  data.dvc  dvc.yaml  main.zip.dvc  params.yaml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.dvc/: config
landscape_classifier/: api.py  cli.py  data.py  train.py
src/landscape_classifier/: api.py  cli.py  data.py  train.py  utils.py
