[project]
authors = [
  {name = "m09", email = "142691+m09@users.noreply.github.com"},
]
dependencies = [
  "dvc>=3.58.0",
  "fastapi[all]>=0.115.5",
  "jupyter>=1.1.1",
  "mlflow>=2.18.0",
  "pillow>=11.0.0",
  "python-multipart>=0.0.19",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.5.2",
  "tensorflow>=2.18.0",
]
description = "Experiment with landscape classifying."
license = "Apache-2.0"
name = "landscape-classifier"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[dependency-groups]
dev = [
  "mypy>=1.13.0",
  "ruff>=0.8.1",
]

[project.scripts]
landscape-classifier = "landscape_classifier.cli:main"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
preview = true
select = ["A", "B", "C", "DOC", "E", "EM", "F", "N", "PIE", "PTH", "RET", "RUF", "SIM", "SLF", "UP", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
ignore-names = ["X", "X_*", "Y", "Y_*"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
