[project]
authors = [
  {name = "m09", email = "142691+m09@users.noreply.github.com"},
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
]
dependencies = [
  "dvc >= 3, < 4",
  "keras >= 3, < 4",
  "mlflow >= 2.20, < 3",
  "niquests >= 3, < 4",
  "numpy >= 2, < 3",
  "pillow >= 11, < 12",
  "pydantic >= 2.10, < 3",
  "scikit-learn >= 1, < 2",
  "tensorflow >= 2.16, < 3",
  "tqdm >= 4, < 5",
  "niquests >= 3, < 4",
]
description = "Experiment with landscape classifying."
license = "Apache-2.0"
name = "landscape-classifier"
readme = "README.md"
requires-python = ">= 3.12"
version = "0.1.0"

[project.optional-dependencies]
fastapi = [
  "fastapi[all] >= 0.115, < 1",
  "python-multipart >= 0.0.19, < 1",
]
mlflow-models-serve = [
  "pip >= 25, < 26",
  "virtualenv >= 20, < 21",
]
notebook = [
  "jupyter >= 1, < 2",
]

[dependency-groups]
dev = [
  "mypy >= 1, < 2",
  "ruff >= 0.8, < 1",
]

[project.scripts]
landscape-classifier = "landscape_classifier.cli:train_cli"
test-api = "landscape_classifier.cli:test_api_cli"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
preview = true
select = ["A", "B", "C", "DOC", "E", "EM", "F", "N", "PIE", "PTH", "RET", "RUF", "SIM", "SLF", "UP", "W"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
ignore-names = ["X", "X_*", "Y", "Y_*"]

[tool.mypy]
disallow_untyped_defs = true
ignore_missing_imports = true
strict_optional = true

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]
